client/css/quiz_show_page.scss
@import 'colors';
@import 'resets';
@import 'defaults';
@import 'pages_common';

#quiz-show-page {
  .quiz-container {
    h4 {
      margin-bottom: 20px;
      color: grey;
    }
    
    .question-item {
      padding: 10px 0 30px;
      
      .question {
        margin-bottom: 5px;
        font-size: 22px;
      }
      
      .choice {
        display: flex;
        align-items: center;
        padding: 10px 0;
      }
      
      .quip {
        padding: 10px 0;
        font-size: 16px;
        font-weight: bold;
        color: $page-background-blue;
      }
    }
    
    .buttons-row {
      text-align: right;
      padding: 25px 5px;
      
      @media (max-width: $mobile-max) {
        padding-bottom: 50px;
      }
    }
  }
}

